lib/package/src/package/snapshots/wasmer_package__package__package__tests__load_old_cowsay.snap
---
source: lib/package/src/package/package.rs
expression: pkg.manifest()
---
package:
  wapm:
    readme:
      volume: metadata
      path: /README.md
    repository: "https://github.com/wapm-packages/cowsay"
atoms:
  cowsay:
    kind: "https://webc.org/kind/wasm"
    signature: "sha256:DPmhiSNXCg5261eTUi3BIvAc/aJttGj+nD+bGhQkVQo="
    annotations:
      wasm:
        features:
          - simd
          - bulk-memory
          - reference-types
          - multi-value
          - threads
          - multi-memory
commands:
  cowsay:
    runner: "https://webc.org/runner/wasi"
    annotations:
      atom:
        name: cowsay
      wasi:
        atom: cowsay
  cowthink:
    runner: "https://webc.org/runner/wasi"
    annotations:
      atom:
        name: cowsay
      wasi:
        atom: cowsay
